Bug 1940878 - Fix content cards source title by adding specifics for high contrast themes. r=home-newtab-reviewers,maxx
It seems that if users had both light theme + high contrast toggled on their devices, the content cards in new tab were showing white-colored text for the source titles. This is a problem because if light theme is toggled, the white text lives on a white background.

Differential Revision: https://phabricator.services.mozilla.com/D233799

--- a/browser/components/newtab/content-src/styles/_theme.scss
+++ b/browser/components/newtab/content-src/styles/_theme.scss
@@ -135,6 +135,16 @@ $shadow-image-inset: inset 0 0 0 0.5px $black-15;
   :root {
     --newtab-text-secondary-color: var(--newtab-text-primary-color);
     --newtab-text-topic-label-color: #CB9EFF;
-    --newtab-text-secondary-text: #FFF;
+
+    color-scheme: light;
+    --newtab-text-secondary-text: #000;
+
+  }
+
+  @media (prefers-color-scheme: dark) {
+    :root {
+      color-scheme: dark;
+      --newtab-text-secondary-text: #FFF;
+    }
   }
 }
